--- a/BlogTemplate/Pages/Drafts.cshtml
+++ b/BlogTemplate/Pages/Drafts.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Drafts";
 
     <h2>@ViewData["Title"]</h2>
+    
 
     if (!Model.DraftSummaries.Any())
     {
@@ -13,15 +14,26 @@
     {
         foreach (var post in Model.DraftSummaries)
         {
+            <br />
             <article>
                 <div class="col-md-12">
-                    <h2><a asp-page="/edit" asp-route-id="@post.Id.ToString("N")" asp-route-slug="@post.Slug">@post.Title</a></h2>
+                    <h4><a asp-page="/edit" asp-route-id="@post.Id.ToString("N")" asp-route-slug="@post.Slug">@post.Title</a></h4>
                     @if (post.PublishTime != default(DateTimeOffset))
                     {
-                        <div class="h5 text-muted">Last Published @post.PublishTime.ToString("MMM dd, yyyy")</div>
+                        <div class="h5 text-muted">Last Published: @post.PublishTime.ToString("MM/dd/yyyy")</div>
                     }
                     <p class="lead">@post.Excerpt</p>
-                    <h4><a href="/post/@post.Id.ToString("N")/@post.Slug"><span class="glyphicon glyphicon-comment"></span> @post.CommentCount</a></h4>
+
+                    @if (post.CommentCount == 1)
+                    {
+                        <h5><a href="/post/@post.Id.ToString("N")/@post.Slug"><span class="glyphicon glyphicon-comment"></span> @post.CommentCount Comment</a></h5>
+                    }
+
+                    else
+                    {
+                        <h5><a href="/post/@post.Id.ToString("N")/@post.Slug"><span class="glyphicon glyphicon-comment"></span> @post.CommentCount Comments</a></h5>
+                    }
+
                 </div>
             </article>
         }
