--- a/BlogTemplate/Pages/Trash.cshtml
+++ b/BlogTemplate/Pages/Trash.cshtml
@@ -3,21 +3,35 @@
 @{
     ViewData["Title"] = "Trash Bin";
 
+    <h2>Trash Bin</h2>
+    <br />
+
     if (!Model.PostSummaries.Any())
     {
-    <div class="jumbotron">
-        <p>There are no posts in your trash bin.</p>
-    </div>
-    }else
+        <div class="jumbotron">
+            <p>There are no posts in your trash bin.</p>
+        </div>
+    }
+    else
     {
         foreach (var post in Model.PostSummaries)
         {
+            <br />
             <article>
                 <div class="col-md-12">
-                    <h2><a asp-page="/post" asp-route-id="@post.Id.ToString("N")" asp-route-slug="@post.Slug">@post.Title</a></h2>
-                    <h5 class="date text-muted">@post.PublishTime.ToString("MMM dd, yyyy")</h5>
+                    <h4><a asp-page="/post" asp-route-id="@post.Id.ToString("N")" asp-route-slug="@post.Slug">@post.Title</a></h4>
+                    <h5 class="date text-muted">@post.PublishTime.ToString("MMMM dd, yyyy")</h5>
                     <p class="lead">@post.Excerpt</p>
-                    <h3><a asp-page="/post" asp-route-id="@post.Id.ToString("N")" asp-route-slug="@post.Slug"><span class="glyphicon glyphicon-comment"></span> @post.CommentCount</a></h3>
+
+                    @if (post.CommentCount == 1)
+                    {
+                        <h5><a asp-page="/post" asp-route-id="@post.Id.ToString("N")" asp-route-slug="@post.Slug"><span class="glyphicon glyphicon-comment"></span> @post.CommentCount Comment</a></h5>
+                    }
+                    else
+                    {
+                        <h5><a asp-page="/post" asp-route-id="@post.Id.ToString("N")" asp-route-slug="@post.Slug"><span class="glyphicon glyphicon-comment"></span> @post.CommentCount Comments</a></h5>
+                    }
+
                 </div>
             </article>
         }
