--- a/BlogTemplate/Pages/About.cshtml
+++ b/BlogTemplate/Pages/About.cshtml
@@ -7,4 +7,15 @@
 <br />
 <h4>@Model.Message</h4>
 
-<p>Use this area to provide additional information.</p>
+<p>Hey all! I go by many, MANY names, but from here on out, I'll simply be known as Admin.  I am she who manages this site and keeps it running for Marigold.
+   <br />
+    <br />
+   It all started with Marigold's most random request: make a blog.  She needed a safe place to express her thoughts, especially after a hard day's work.  I guess
+   she thought a blog would help that.  Huh...Oh well.  Anyway, one thing led to another and I needed a project, so I figured why not?  At least this way, I can brush up
+   on my C# and rekindle my desire to learn more about web development.
+
+    <br />
+    <br />
+    Please bear with me; this blog is still a work in progress and there are some quirks that need to be ironed out.  Also, this is Marigold's personal blog so don't expect to be able to
+    sign in and start blogging away.  This is not Tumblr.  Anyway, please enjoy everything that Marigold has to offer.
+    </p>
