--- a/BlogTemplate/Pages/Edit.cshtml
+++ b/BlogTemplate/Pages/Edit.cshtml
@@ -13,25 +13,25 @@
 <article>
     <h2>Edit Post</h2>
     <div class="col-md-12 well">
-        <form method="post" id="editpost" enctype="multipart/form-data" data-has-slug="@Model.hasSlug">
+        <form method="post" id="editpost" enctype="multipart/form-data">
             @if (TempData["notice"] != null)
             {
                 <h3>@TempData["notice"]</h3>
             }
             <div class="form-group col-md-6">
                 <label for="Title">Title</></label>
-                <input type="text" class="form-control" placeholder="" asp-for="EditedPost.Title" data-oldtitle="@Model.EditedPost.Title" />
-                <span asp-validation-for="EditedPost.Title" class="text-warning"></span>
+                <input type="text" class="form-control" placeholder="" asp-for="Post.Title" data-oldtitle="Post.Title" />
+                <span asp-validation-for="Post.Title" class="text-warning"></span>
             </div>
             <input type="hidden" name="updateSlug" id="updateSlug" value="false" />
             <div class="col-md-12 form-group">
                 <label for="Body" class="primaryField">Body</label>
-                <textarea rows="10" class="form-control" placeholder="" asp-for="EditedPost.Body" id="post-body"></textarea>
-                <span asp-validation-for="EditedPost.Body" class="text-warning"></span>
+                <textarea rows="10" class="form-control" placeholder="" asp-for="Post.Body" id="post-body"></textarea>
+                <span asp-validation-for="Post.Body" class="text-warning"></span>
             </div>
             <div class="col-md-12 form-group">
                 <label for="Excerpt" class="secondaryField">Excerpt (Optional)</label>
-                <textarea class="form-control" placeholder="" asp-for="EditedPost.Excerpt"></textarea>
+                <textarea class="form-control" placeholder="" asp-for="Post.Excerpt"></textarea>
             </div>
             <div class="col-md-12">
                 <div class="form-group">
