--- a/BlogTemplate/Pages/New.cshtml
+++ b/BlogTemplate/Pages/New.cshtml
@@ -16,17 +16,17 @@
     <div class="col-md-12 well">
         <div class="form-group col-md-6">
             <label for="Title">Title</></label>
-            <input type="text" class="form-control" placeholder="" asp-for="NewPost.Title" />
-            <span asp-validation-for="NewPost.Title" class="text-warning"></span>
+            <input type="text" class="form-control" placeholder="" asp-for="Post.Title" />
+            <span asp-validation-for="Post.Title" class="text-warning"></span>
         </div>
         <div class="form-group col-md-12">
             <label for="Body" class="primaryField">Body</label>
-            <textarea rows="10" class="form-control" placeholder="" asp-for="NewPost.Body" id="post-body"></textarea>
-            <span asp-validation-for="NewPost.Body" class="text-warning"></span>
+            <textarea rows="10" class="form-control" placeholder="" asp-for="Post.Body" id="post-body"></textarea>
+            <span asp-validation-for="Post.Body" class="text-warning"></span>
         </div>
         <div class="form-group col-md-12">
             <label for="Excerpt" class="secondaryField">Excerpt (Optional)</label>
-            <textarea class="form-control" placeholder="" asp-for="NewPost.Excerpt"></textarea>
+            <textarea class="form-control" placeholder="" asp-for="Post.Excerpt"></textarea>
         </div>
         <div class="col-md-12">
             <div class="form-group">
@@ -36,7 +36,7 @@
         </div>
         <div class="col-md-12">
             <input type="submit" name="save" class="btn btn-primary btn-sm" value="Save Draft" asp-page-handler="SaveDraft" />
-            <input type="submit" name="publish" class="btn btn-primary btn-sm" value="Publish" asp-page-handler="Publish" />
+            <input type="submit" name="publish" class="btn btn-primary btn-sm" value="Publish" />
         </div>
     </div>
 </form>
