--- a/BlogTemplate/Pages/Index.cshtml
+++ b/BlogTemplate/Pages/Index.cshtml
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="row p-3">
             @foreach (var post in Model.Post)
-            {
+            {   //happy trails
                 <div class="col-4 mb-3">
                     <article class="card h-100 text-primary bg-white mb-3" style="max-width: 20rem;">
 
